# cortex-a

./: .editorconfig  .rustfmt.toml  Cargo.toml  LICENSE-MIT  Makefile  README.md  rust-toolchain.toml
.github/workflows/: build.yml
src/: asm.rs  barrier.rs  lib.rs  registers.rs
src/asm/: barrier.rs  random.rs
src/register/: cntfrq_el0.rs  cntp_ctl_el0.rs  cntp_cval_el0.rs  cntp_tval_el0.rs  macros.rs  mod.rs  mpidr_el1.rs  sp.rs
src/registers/: actlr_el1.rs  actlr_el2.rs  actlr_el3.rs  ccsidr_el1.rs  clidr_el1.rs  cntfrq_el0.rs  cnthctl_el2.rs  cntp_ctl_el0.rs  cntp_cval_el0.rs  cntp_tval_el0.rs  cntpct_el0.rs  cntv_ctl_el0.rs  cntv_cval_el0.rs  cntv_tval_el0.rs  cntvct_el0.rs  cntvoff_el2.rs  cpacr_el1.rs  cpuectrl_el1.rs  csselr_el1.rs  currentel.rs  dacr32_el2.rs  daif.rs  elr_el1.rs  elr_el2.rs  elr_el3.rs  esr_el1.rs  esr_el2.rs  far_el1.rs  far_el2.rs  fp.rs  hcr_el2.rs  id_aa64isar0_el1.rs  id_aa64mmfr0_el1.rs  id_aa64mmfr1_el1.rs  id_aa64mmfr2_el1.rs  lr.rs  macros.rs  mair_el1.rs  mair_el2.rs  midr_el1.rs  (+25 more)
src/regs/: cntfrq_el0.rs  cnthctl_el2.rs  cntp_ctl_el0.rs  cntp_tval_el0.rs  cntpct_el0.rs  cntv_ctl_el0.rs  cntv_tval_el0.rs  cntvct_el0.rs  cntvoff_el2.rs  currentel.rs  daif.rs  elr_el1.rs  elr_el2.rs  elr_el3.rs  esr_el1.rs  esr_el2.rs  far_el1.rs  far_el2.rs  hcr_el2.rs  id_aa64mmfr0_el1.rs  lr.rs  macros.rs  mair_el1.rs  mair_el2.rs  midr_el1.rs  mod.rs  mpidr_el1.rs  par_el1.rs  scr_el3.rs  sctlr_el1.rs  sctlr_el2.rs  sp.rs  sp_el0.rs  sp_el1.rs  spsel.rs  spsr_el1.rs  spsr_el2.rs  spsr_el3.rs  tcr_el1.rs  tcr_el2.rs  (+7 more)
