[package]
name = "cortex-a"
version = "5.1.6"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
description = "Low level access to Cortex-A processors"
homepage = "https://github.com/rust-embedded/cortex-a"
repository = "https://github.com/rust-embedded/cortex-a"
readme = "README.md"
keywords = ["arm", "aarch64", "cortex-a", "register"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"
exclude = [
        "Makefile"
]

[dependencies]
register = "1.x.x"
