[package]
name = "cortex-a"
version = "7.0.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
description = "Low level access to Cortex-A processors"
homepage = "https://github.com/rust-embedded/cortex-a"
repository = "https://github.com/rust-embedded/cortex-a"
readme = "README.md"
keywords = ["arm", "aarch64", "cortex-a", "register"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"
exclude = [
        ".github",
        ".gitignore",
        ".rustfmt.toml",
        ".vscode",
        ".editorconfig",
        "Makefile"
]

[dependencies]
tock-registers = { version = "0.7.x", default-features = false } # Use it as interface-only library.
